# zomato_ai_restaurant_recommendation

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  README.md  SERVER_SETUP.md  STREAMLIT_INSTRUCTIONS.md  pyproject.toml  requirements.txt  run_tests.py  streamlit_app.py  validate.sh
backend/: config.py  database.py  ingest.py  main.py  models.py  requirements.txt  schemas.py
backend/llm/: client.py  prompts.py
backend/routers/: cities.py  recommendations.py  restaurants.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.test.jsx  index.css
frontend/src/components/: CityDropdown.jsx  CityDropdown.test.jsx  PriceDropdown.jsx  RecommendButton.jsx  RestaurantCard.jsx  RestaurantCard.test.jsx  ResultCountSelector.jsx
scripts/: debug_gemini.py  ingest_zomato_data.py  list_models.py  setup_ollama.sh  terminal_test.py  transform.py
tests/: conftest.py  test_backend.py  test_ingest.py  test_recommendations.py  test_transform.py
