[project]
name = "zomato-ai-recommender"
version = "0.1.0"
description = "AI Restaurant Recommendation PoC"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.14.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
